<resources>
    <string name="app_name">eBitu</string>
    <string name="service_id">be.webtito.ebitu</string>
    <string name="title_activity_start">eBitu</string>
    <string name="action_settings">Paramètres</string>
    <string name="about">À propos</string>
    <string name="master">Devenir maître de chants</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_nearby">Maître de chant</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="nearby_menu">Maître de chant</string>
    <string name="nearby_name_prompt">Nom à afficher</string>
    <string name="nearby_connect_button">Devenir maître de chant</string>
    <string name="nearby_help">eBitu propose un mode maître de chant :
        une fois activé, ton téléphone se signalera aux autres personnes utilisant l\'application
        à proximité. Une fois qu\'ils t\'auront accepté comme maître de chant, tu pourras charger
        automatiquement le prochain chant sur leur écran !
    </string>

    <string name="title_activity_song">Chant</string>
    <string name="title_activity_about">À propos d\'eBitu</string>

    <string name="authors">Auteurs :\nAIGLON Benjamin\nDE WOLF Christophe\nDIDOUH Mohamed\nWAUTHIER Gaetan\n  </string>
    <string name="version">Version : 1.0\n</string>
    <string name="date">Date : Avril 2017</string>
    <string name="nearby_new_publisher_message">Tu es maintenant annoncé comme maître de chant!\n\nMerci d\'attendre que tout le monde se connecte avant de cliquer sur OK.</string>
    <string name="nearby_new_publisher_title">Maître de chant</string>
    <string name="nearby_publisher">Maître de chant</string>
    <string name="title_activity_settings">Paramètres</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Mon nom de maître de chant</string>
    <string name="pref_default_display_name">Maître de chant</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_night_mode">Mode nuit</string>
    <string name="settings_color_text_title">Couleur du texte des chants</string>
    <string name="settings_color_background_title">Couleur du fond des chants</string>

</resources>
