<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="settings_display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <CheckBoxPreference
        android:key="pref_night_mode"
        android:title="@string/pref_title_night_mode" />


    <com.kizitonwose.colorpreference.ColorPreference
        android:defaultValue="@color/colorPrimary"
        android:key="settings_color_text"
        android:title="@string/settings_color_text_title"
        app:colorChoices="@array/color_references"
        app:colorShape="circle" />


    <com.kizitonwose.colorpreference.ColorPreference
        android:defaultValue="@color/colorPrimary"
        android:key="settings_color_background"
        android:title="@string/settings_color_background_title"
        app:colorChoices="@array/color_references"
        app:colorShape="circle" />

</PreferenceScreen>
